--- a/UserMaintenance/UserMaintenance/Resource1.resx
+++ b/UserMaintenance/UserMaintenance/Resource1.resx
@@ -117,13 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Add" xml:space="preserve">
-    <value>Hozzáadás</value>
+  <data name="FullName" xml:space="preserve">
+    <value>Teljes név</value>
   </data>
-  <data name="FirstName" xml:space="preserve">
-    <value>Keresztnév</value>
-  </data>
-  <data name="LastName" xml:space="preserve">
-    <value>Vezetéknév</value>
+  <data name="Save" xml:space="preserve">
+    <value>Mentés</value>
   </data>
 </root>
